fix visible z-index

--- a/src/app/features/character/component/main/main.component.css
+++ b/src/app/features/character/component/main/main.component.css
@@ -57,3 +57,7 @@
 .align-icon {
     margin-top: -2px;
 }
+
+.use-visible {
+    z-index: 2;
+}
